	Fixed off-by-one error where a corrupted character was saved to the end of the file.
	Patched error where the first character of a file written in Aviate was deleted upon saving.
	Added addToTextFileStruct() to add a character to a given textFile.  This saves some lines of code.
	Did some code cleanup, added even more comments to document the code.  Removed unnecessary includes.

	*CHANGELOG: Documented recent changes.
	Fixed a typo with the date from yesterday.
	Mass spelling and grammar corrections.

2019-04-01 James Phillips <james@jamesphillipsuk.com>
	*main.c: Modified initialiseTextFile() for memory efficiency.
	Modified rewriteFile() so it doesn't close NCurses and hide our output until we give it a character.
	Minor alterations to comments and code cleanliness.
	Modified getFileContents() so it doesn't get null data before the start of the file, or crash at the end.
	Implemented input checking to save inputted text to a file - because recognition of the control modifier from NCurses caused some runtime errors, I'm using F1 and F2 for save and exit respectively.  I've updated this in the How To notice as well.
	Added Backspace functionality, using NCurses KEY_BACKSPACE and an alternative value which - together - should work for most keyboards.

	*CHANGELOG: Documented recent changes.

2019-03-31 James Phillips <james@jamesphillipsuk.com>
	*main.c: Included ncurses.h for the text editing interface.
	Implemented NCurses in the rewriteFile() function.
	Renamed printFile() to getFileContents() - it no longer needs to print the file, but it does still need to get the file's contents.
	Moved file content printing to rewriteFile() as it can do so via NCurses, I'll probably separate this out again later.
	Removed auto-filling files with Hello World message as I'm preparing to do the function to allow users to write a message.

	*CHANGELOG: Documented recent changes.

2019-03-29 James Phillips <james@jamesphillipsuk.com>