@@ -6,6 +6,11 @@
 	Patched error where the first character of a file written in Aviate was deleted upon saving.
 	Added addToTextFileStruct() to add a character to a given textFile.  This saves some lines of code.
 	Did some code cleanup, added even more comments to document the code.  Removed unnecessary includes.
+	Moved ALT_KEY_BACKSPACE from a const int to a #define, as some versions of GCC won't accept it.
+
+	*README: Updated README.
+
+	*makefile: added -std flag to ensure the compiler uses the right standards.
 
 	*CHANGELOG: Documented recent changes.
 	Fixed a typo with the date from yesterday.
